fix: tab nav top offset to prevent overlap with title bar

--- a/scss/module.scss
+++ b/scss/module.scss
@@ -30,6 +30,7 @@
 .compendium-browser.vertical-tabs nav.tabs {
   --tab-full-width: 41px;
   position: absolute;
+  top: 36px; /* offset below title bar */
   display: flex;
   flex-direction: column;
   align-items: stretch;
